[gd_scene load_steps=6 format=2]

[ext_resource path="res://Teleports.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 545 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44.5, 543.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 964, 95.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 964.75, 51.5 )

[node name="Teleports" type="Node2D"]
script = ExtResource( 1 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -25, 536 )
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Right"]
position = Vector2( 1968, 535.5 )
shape = SubResource( 2 )

[node name="Up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2( 954, -98.5 )
shape = SubResource( 3 )

[node name="Down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
position = Vector2( 965.25, 1134.5 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]
[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]
